src/examples/errors/16_not_on_int.veri
// Error: Negation on integer
// Expected error: E001 - Type mismatch (expected bool)

fn main() {
    let x: int = 5;
    let y: bool = !x;
}
